# Spam_Email_Classifier

./: AAIS-HW3-Claude-PACKAGE.txt  CONTRIBUTING.md  Dockerfile  LICENSE  bdd_features.txt  bdd_step_implementations.py  complete_deployment_guide.md  comprehensive_readme.md  copy_paste_files.md  docker-compose.yml  domain_entities.py  fibonacci.py  final_complete_package.md  github_gist_content.md  pyproject.toml  readme.md  replit.nix  requirements.txt  setup.py  setup.sh  setup_complete.sh  streamlit_app.py  tdd_unit_tests.py
Other/: spam_classifier_structure.py  zip_package_generator.py
docs/: CRISP_DM_Process.md  README.md  architecture.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2c37a7518f1e4efc___init___py.html  z_581c2fd077d5a87e___init___py.html  z_941ebb86ca477f27___init___py.html  z_941ebb86ca477f27_app_py.html  z_ac5a29abfc559605___init___py.html  z_b2166b0f30ce4647___init___py.html  z_b6a456402d89139e___init___py.html  z_b6a456402d89139e_entities_py.html
scripts/: download_dataset.py  train.py
src/spam_classifier/data_science/: crisp_dm_pipeline.py
src/spam_classifier/domain/: entities.py
src/spam_classifier/web/: app backup.py  app new bug.py  app new good.py  app.py
tests/: __init__.py
tests/bdd/features/: email_classification.feature
tests/bdd/steps/: classification_steps.py
tests/integration/: test_pipeline.py
tests/unit/: test_domain.py
utils/: data_utils.py  model_utils.py  vis_utils.py
